--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -19,8 +19,8 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{struct_material}{Material}} \\*Strictly defined type that can be serialized/deserialized }{\pageref{struct_material}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_mesh}{Mesh}} \\*Class that holds information about vertices in particular mesh in model }{\pageref{class_mesh}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_model}{Model}} \\*Class that allows to load .obj models and store them }{\pageref{class_model}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_non_hittable}{Non\+Hittable}} }{\pageref{class_non_hittable}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_polygon}{Polygon}} }{\pageref{class_polygon}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_non_hittable}{Non\+Hittable}} \\*Hittable object that cannot be hit }{\pageref{class_non_hittable}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_polygon}{Polygon}} \\*Slightly differs from Triangle. It is connected with mesh and stores its face index }{\pageref{class_polygon}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_ray}{Ray}} \\*\doxylink{struct_ray}{Ray} representation, P(t) = origin + direction \texorpdfstring{$\ast$}{*} t }{\pageref{struct_ray}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_renderer}{Renderer}} \\*Class that renders scene to image }{\pageref{class_renderer}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_scene}{Scene}} \\*Struct that holds camera, all primitives and models. Can be serialized/deserialized }{\pageref{struct_scene}}{}
