--- a/docs/latex/class_non_hittable.tex
+++ b/docs/latex/class_non_hittable.tex
@@ -1,5 +1,14 @@
 \doxysection{Non\+Hittable Class Reference}
 \hypertarget{class_non_hittable}{}\label{class_non_hittable}\index{NonHittable@{NonHittable}}
+
+
+Hittable object that cannot be hit.  
+
+
+
+
+{\ttfamily \#include $<$Non\+Hittable.\+h$>$}
+
 Inheritance diagram for Non\+Hittable\+:\begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -29,6 +38,9 @@ constexpr {\bfseries Hittable\+Object} (\mbox{\hyperlink{class_hittable_object}{
 constexpr \mbox{\hyperlink{class_hittable_object}{Hittable\+Object}} \& {\bfseries operator=} (const \mbox{\hyperlink{class_hittable_object}{Hittable\+Object}} \&)=default
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Hittable object that cannot be hit. 
 
 \doxysubsection{Member Function Documentation}
 \Hypertarget{class_non_hittable_a38f05a638f15a1c283e2a61a4305088a}\label{class_non_hittable_a38f05a638f15a1c283e2a61a4305088a} 
