--- a/docs/latex/class_polygon.tex
+++ b/docs/latex/class_polygon.tex
@@ -1,5 +1,14 @@
 \doxysection{Polygon Class Reference}
 \hypertarget{class_polygon}{}\label{class_polygon}\index{Polygon@{Polygon}}
+
+
+Slightly differs from Triangle. It is connected with mesh and stores its face index.  
+
+
+
+
+{\ttfamily \#include $<$Polygon.\+h$>$}
+
 Inheritance diagram for Polygon\+:\begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -44,6 +53,9 @@ const \mbox{\hyperlink{struct_material}{Material}} \texorpdfstring{$\ast$}{*} {\
 int {\bfseries face\+Index}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Slightly differs from Triangle. It is connected with mesh and stores its face index. 
 
 \doxysubsection{Member Function Documentation}
 \Hypertarget{class_polygon_a4d270742ed868e33e9adcc8e430660fe}\label{class_polygon_a4d270742ed868e33e9adcc8e430660fe} 
